--- a/src/assets/element-variables.scss
+++ b/src/assets/element-variables.scss
@@ -29,3 +29,22 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 :export {
   theme: $--color-primary;
 }
+
+.el-breadcrumb {
+  margin-bottom: 15px;
+  font-size: 13px;
+}
+
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #606266;
+}
+
+.el-pagination {
+  margin-top: 15px;
+}
