--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -7,4 +7,8 @@ body,
   margin: 0;
   padding: 0;
   min-width: 1366px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 }
