--- a/src/assets/element-variables.scss
+++ b/src/assets/element-variables.scss
@@ -6,7 +6,7 @@
 /* theme color */
 $--color-primary: #1890ff;
 $--color-success: #13ce66;
-$--color-warning: #FFBA00;
+$--color-warning: #ffba00;
 $--color-danger: #ff4949;
 // $--color-info: #1E1E1E;
 
@@ -17,17 +17,37 @@ $--button-font-weight: 400;
 $--border-color-light: #dfe4ed;
 $--border-color-lighter: #e6ebf5;
 
-$--table-border:1px solid#dfe6ec;
+$--table-border: 1px solid#dfe6ec;
 
 /* icon font path, required */
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
-@import "~element-ui/packages/theme-chalk/src/index";
+@import '~element-ui/packages/theme-chalk/src/index';
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   theme: $--color-primary;
+}
+
+.el-message--success {
+  background-color: #e7faf0 !important;
+  border-color: #d0f5e0 !important;
+}
+
+.el-message--info {
+  background-color: #ecf1ff !important;
+  border-color: #97b8ff !important;
+}
+
+.el-message--danger {
+  background-color: #feeef0 !important;
+  border-color: #fddce2 !important;
+}
+
+.el-message--warning {
+  background-color: #fffaf1 !important;
+  border-color: #fff5e3 !important;
 }
 
 .el-breadcrumb {
@@ -40,7 +60,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 }
 
 .el-table {
-  margin-top: 15px;
+  margin-top: 20px;
   font-size: 14px;
   color: #606266;
 }
